# CosySim

./: .env.example  .gitignore  CHEATSHEET.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  INSTALL.ps1  LAUNCH_SCENES_GUIDE.md  LAUNCH_STATUS.md  MIGRATION.md  QUICK_START.md  README.md  SECURITY.md  asset  docker-compose.prod.yml  fix_imports.py  fix_imports_auto.py  install_log.txt  launch_simulation.py  launcher.py  pretrained_models  pyproject.toml  requirements.txt  scan_deps.py  start_servers.ps1  temp_attributes.txt
config/: default.yaml  development.yaml  production.yaml
content/scenes/admin/: __init__.py  admin_panel.py
content/scenes/assets/: __init__.py  asset_generator.py
content/scenes/bedroom/: bedroom_scene.py
content/scenes/bedroom/static/js/: bedroom.js
content/scenes/bedroom/templates/: bedroom_ui.html
content/scenes/dashboard/: dashboard_v2.py
content/scenes/hub/: hub_scene.py
content/scenes/phone/: __init__.py  phone_scene.py
content/scenes/phone/static/css/: gallery.css  phone.css  video_call.css  voice_call.css
content/scenes/phone/static/js/: control_panel.js  phone.js  video.js  voice.js
content/scenes/phone/templates/: phone_ui.html  video_call.html  voice_call.html
content/simulation/: README.md  __init__.py  example_integration.py  requirements.txt  test_system.py
content/simulation/character_system/: __init__.py  character.py  personality.py  role.py
content/simulation/database/: __init__.py  db.py  rag.py
content/simulation/scenes/admin/: admin_panel.py
content/simulation/scenes/bedroom/: BEDROOM_SCENE_COMPLETE.md  bedroom_scene.py
content/simulation/scenes/bedroom/static/css/: bedroom.css
content/simulation/scenes/dashboard/: dashboard_v2.py
content/simulation/scenes/hub/: __init__.py  hub_scene - Copy.py  hub_scene.py
content/simulation/scenes/phone/: phone_scene.py
content/simulation/scenes/phone/apps/: __init__.py  gallery.py  messages.py
content/simulation/scenes/phone/static/css/: phone.css
content/simulation/scenes/phone/static/js/: phone.js
content/simulation/scenes/phone/templates/: phone_ui.html
content/simulation/services/: anonymous_character.py  autonomous_messenger.py  comfyui_client.py  cosylogger.py  llm_service.py  media_generator.py  video_call.py  video_message.py  voice_call.py  voice_message.py
docs/: STRUCTURE_GUIDE.md
engine/: config.py
engine/assets/: __init__.py  advanced_types.py  base.py  manager.py  types.py
engine/scenes/: __init__.py  base_scene.py  scene_manager.py
engine/testing/framework/: QUICK_START.md  README.md  __init__.py  demo.py  example_integration.py  monitor.py  report_generator.py  result_store.py  simple_example.py  tts_chunk_benchmark.py
